--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imgSplash"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/bg" />
+
+    <ImageView
+        android:id="@+id/imgIcon"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="190dp"
+        android:src="@drawable/icon" />
+
     <TextView
-        android:id="@+id/txtheadline"
+        android:id="@+id/txtHeadLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to JusticeChain"
+        android:layout_below="@+id/imgIcon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="200dp"
+        android:fontFamily="@font/ubuntu"
+        android:padding="5dp"
+        android:text="Welcome to JusticeChain"
         android:textSize="25sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
+
     <TextView
-        android:id="@+id/txtsubheadline"
+        android:id="@+id/txtSubHeadLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Justice, Redefined: Blockchain Empowered"
-        android:layout_below="@+id/txtheadline"
+        android:layout_below="@+id/txtHeadLine"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        />
-    <Button
-        android:id="@+id/btgetstarted"
-        android:layout_width="300dp"
+        android:fontFamily="@font/ubuntu"
+        android:padding="5dp"
+        android:text="Justice, Redefined: Blockchain Empowered" />
+
+    <androidx.constraintlayout.utils.widget.MotionButton
+        android:id="@+id/btGetStarted"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Started"
+        android:layout_below="@+id/txtSubHeadLine"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/txtsubheadline"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/button_bg"
+        android:fontFamily="@font/ubuntu"
+        android:padding="5dp"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:text="Get Started" />
 
-
-        />
 </RelativeLayout>
