--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <ImageView
@@ -15,23 +14,23 @@
 
     <ImageView
         android:id="@+id/imgIcon"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="190dp"
+        android:layout_height="190dp"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="240dp"
         android:src="@drawable/icon" />
 
     <TextView
         android:id="@+id/txtHeadLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imgIcon"
+        android:layout_above="@+id/txtSubHeadLine"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
         android:fontFamily="@font/ubuntu"
         android:padding="5dp"
         android:text="Welcome to JusticeChain"
+        android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold" />
 
@@ -39,29 +38,28 @@
         android:id="@+id/txtSubHeadLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtHeadLine"
+        android:layout_above="@+id/btGetStarted"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/ubuntu"
         android:padding="5dp"
-        android:text="Justice, Redefined: Blockchain Empowered" />
+        android:text="Justice, Redefined: Blockchain Empowered"
+        android:textColor="@color/black" />
 
     <androidx.constraintlayout.utils.widget.MotionButton
         android:id="@+id/btGetStarted"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtSubHeadLine"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/button_bg"
         android:fontFamily="@font/ubuntu"
         android:padding="5dp"
-        android:textStyle="bold"
+        android:text="Get Started"
         android:textSize="16sp"
-        android:text="Get Started" />
+        android:textStyle="bold" />
 
 </RelativeLayout>
